--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Classes</title>
 </head>
 <body>
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
